// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TAG COMPONENT > renders inverted variant 1`] = `
<DocumentFragment>
  <a
    class="inline-block font-mono text-meta tracking-wide px-3 py-1 rounded-full transition-colors duration-fast bg-accent text-bg hover:bg-accent/85"
    href="/tags/night"
  >
    night
  </a>
</DocumentFragment>
`;

exports[`TAG COMPONENT > should render 1`] = `
<DocumentFragment>
  <a
    class="inline-block font-mono text-meta tracking-wide px-3 py-1 rounded-full transition-colors duration-fast border border-rule text-text-mute hover:text-accent hover:border-accent"
    href="tagLink"
  >
    tagName
  </a>
</DocumentFragment>
`;

exports[`TAGSET COMPONENT > merges custom className with tagSet styles 1`] = `
<DocumentFragment>
  <div
    class="flex flex-wrap items-center gap-2 flex gap-2"
  >
    <a
      class="inline-block font-mono text-meta tracking-wide px-3 py-1 rounded-full transition-colors duration-fast border border-rule text-text-mute hover:text-accent hover:border-accent"
      href="/tags/a"
    >
      a
    </a>
    <a
      class="inline-block font-mono text-meta tracking-wide px-3 py-1 rounded-full transition-colors duration-fast border border-rule text-text-mute hover:text-accent hover:border-accent"
      href="/tags/b"
    >
      b
    </a>
  </div>
</DocumentFragment>
`;

exports[`TAGSET COMPONENT > should render 1`] = `
<DocumentFragment>
  <div
    class="flex flex-wrap items-center gap-2 "
  >
    <a
      class="inline-block font-mono text-meta tracking-wide px-3 py-1 rounded-full transition-colors duration-fast border border-rule text-text-mute hover:text-accent hover:border-accent"
      href="tagLink"
    >
      tagName
    </a>
  </div>
</DocumentFragment>
`;
